Fix class descript editor content.

--- a/templates/actor-sheet.html
+++ b/templates/actor-sheet.html
@@ -181,13 +181,12 @@
             <div class="form-group">
                 <label>{{ localize "MB.Description" }}</label>
             </div>
-            {{editor content=data.background target="data.class.description" button=true owner=owner editable=editable}}
+            {{editor content=data.class.description target="data.class.description" button=true owner=owner editable=editable}}
         </div>
 
         {{!-- Background Tab --}}
         <div class="tab" data-group="primary" data-tab="description">
             {{editor content=data.background target="data.background" button=true owner=owner editable=editable}}
         </div>
-
 
 </form>
