--- a/templates/actor-sheet.html
+++ b/templates/actor-sheet.html
@@ -24,16 +24,30 @@
 
         {{!-- Abilities Tab --}}
         <div class="tab abilities" data-group="primary" data-tab="abilities">
-          <h1 class="left-column-title">Abilities</h1>
-          {{#each data.abilities as |ability key|}}
-            <div class="ability flexrow flex-left">
-              <label class="mb-label" for="data.abilities.{{key}}.score">{{ability.label}}</label>
-              <div class="flexrow flex-center flex-between">
-                <input class="left-column-input" type="text" name="data.abilities.{{key}}.score" value="{{numberFormat ability.score decimals=0 sign=true}}" data-dtype="Number"/>
-                <span class="rollable" data-roll="d20+@abilities.{{key}}.score" data-label="{{key}}">{{localize "MB.Test"}}</span>
-              </div>
+            <h1 class="left-column-title">Abilities</h1>
+            {{#each data.abilities as |ability key|}}
+                <div class="ability flexrow flex-left">
+                    <label class="mb-label" for="data.abilities.{{key}}.score">{{ability.label}}</label>
+                    <div class="flexrow flex-center flex-between">
+                        <input class="left-column-input" type="text" name="data.abilities.{{key}}.score" value="{{numberFormat ability.score decimals=0 sign=true}}" data-dtype="Number"/>
+                        <span class="rollable" data-roll="d20+@abilities.{{key}}.score" data-label="{{key}}">{{localize "MB.Test"}}</span>
+                    </div>
+                </div>
+            {{/each}}
+            <div class="form-group">
+                <label>{{ localize "MB.HitPoints" }}</label>
+                <input type="text" name="data.hp.current" value="{{data.hp.current}}" placeholder="" data-dtype="Number" />
+                /
+                <input type="text" name="data.hp.max" value="{{data.hp.max}}" placeholder="" data-dtype="Number" />
             </div>
-          {{/each}}
+            <div class="form-group">
+                <label>{{ localize "MB.Powers" }}</label>
+                <input type="text" name="data.powers" value="{{data.powers}}" placeholder="" data-dtype="Number" />
+            </div>
+            <div class="form-group">
+                <label>{{ localize "MB.Omens" }}</label>
+                <input type="text" name="data.omens" value="{{data.omens}}" placeholder="" data-dtype="Number" />
+            </div>
         </div>
 
         {{!-- Inventory Tab --}}
