--- a/templates/actor-sheet.html
+++ b/templates/actor-sheet.html
@@ -107,7 +107,30 @@
                         </div>
                     </li>
                     {{/each}}
-                </ol>            
+                </ol>
+
+                <li class="items-header flexrow">
+                    <h3 class="item-name flexrow">{{localize "MB.ItemTypeShieldPlural"}}</h3>
+                    <div class="item-controls flexrow">
+                        <a class="item-control item-create" title='{{localize "MB.ItemCreate"}}'>
+                            <i class="fas fa-plus"></i> {{localize "MB.Add"}}
+                        </a>
+                    </div>
+                </li>   
+                <ol class="item-list">
+                    {{#each actor.shields as |item id|}}
+                    <li class="item flexrow" data-item-id="{{item._id}}">
+                        <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
+                        <h4 class="item-name">{{item.name}}</h4>
+                        <div class="item-buttons">
+                        </div>
+                        <div class="item-controls">
+                            <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                            <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                        </div>
+                    </li>
+                    {{/each}}
+                </ol>  
 
                 <li class="items-header flexrow">
                     <h3 class="item-name flexrow">{{localize "MB.ItemTypeScrollPlural"}}</h3>
