--- a/styles/morkborg.css
+++ b/styles/morkborg.css
@@ -1,6 +1,36 @@
+@import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');
+@font-face {
+  font-family: 'Bayreuth';
+  src: url("../fonts/bayreuth.ttf") format("truetype");
+}
+@font-face {
+  font-family: 'Blood Crow';
+  src: url("../fonts/bloodcrow.ttf") format("truetype");
+}
 @font-face {
   font-family: 'FetteTrumpDeutsch';
   src: url("../fonts/FetteTrumpDeutsch.ttf") format("truetype");
+}
+@font-face {
+  font-family: 'Heretic';
+  src: url("../fonts/Heretic.ttf") format("truetype");
+}
+@font-face {
+  font-family: 'Modesto Condensed';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../../fonts/modesto-condensed/modesto-condensed.woff2') format('woff2');
+}
+@font-face {
+  font-family: 'Modesto Condensed';
+  font-style: normal;
+  font-weight: 700;
+  src: url('../../fonts/modesto-condensed/modesto-condensed-bold.woff2') format('woff2');
+}
+.modesto {
+  font-family: "Modesto Condensed", "Palatino Linotype", serif;
+  font-size: 20px;
+  font-weight: 700;
 }
 .flexrow {
   display: flex;
@@ -44,18 +74,10 @@
   flex: 4;
 }
 .morkborg {
-  /* Sheet Tabs */
-  /* Items List */
-  /* Attributes */
 }
 .morkborg .window-content {
-  height: 100%;
-  padding: 5px;
-  overflow-y: hidden;
-  /* XXX
-  background: black;
-  color: white;
-  */
+  font-size: 13px;
+  color: #191813;
 }
 .morkborg form {
   height: 100%;
@@ -76,17 +98,53 @@
   overflow-y: auto;
   align-content: flex-start;
 }
+.morkborg.sheet input[type="text"],
+.morkborg.sheet input[type="number"] {
+  background: none;
+  border: 1px solid transparent;
+}
+.morkborg.sheet input[type="text"]:hover,
+.morkborg.sheet input[type="number"]:hover,
+.morkborg.sheet input[type="text"]:focus,
+.morkborg.sheet input[type="number"]:focus {
+  border: 1px solid #111;
+}
+.morkborg.sheet select {
+  flex: 1;
+  font-size: 12px;
+  height: 22px;
+  background: transparent;
+}
+.morkborg.sheet .editable .rollable:hover {
+  color: #000;
+  text-shadow: 0 0 10px red;
+  cursor: pointer;
+}
 .morkborg .sheet-header {
   flex: 0 0 100px;
   border-bottom: 2px groove #eeede0;
+}
+.morkborg.sheet .sheet-header h1 {
+  flex: 1;
+  border-bottom: none;
+  height: 60px;
+  margin: 0;
+  padding: 5px;
+}
+.morkborg.sheet .sheet-header h1 input {
+  display: block;
+  height: 50px;
+  font-size: 32px;
+  margin: 0;
 }
 .morkborg .sheet-header .profile-img {
   object-fit: contain;
   border: none;
   border-right: 2px groove #eeede0;
-  flex: 0 0 160px;
-  max-width: 160px;
-  height: 160px;
+  /* TODO: figure out desired height of attributes and make this match up */
+  flex: 0 0 173px;
+  max-width: 173px;
+  height: 173px;
 }
 .morkborg .sheet-header h1.charname {
   flex: 1;
@@ -96,6 +154,8 @@
 .morkborg .sheet-header h1.charname input {
   height: 40px;
   margin: 10px 0;
+  font-family: "Blood Crow", fantasy, serif;
+  font-size: 38px;  
 }
 .morkborg .sheet-header .header-classname {
   flex: 0 0 150px;
@@ -103,6 +163,30 @@
   height: 60px;
   justify-content: flex-end;
   text-align: right;
+}
+.morkborg.sheet .sheet-header .summary {
+  flex: 0 0 100%;
+  height: 40px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  border-top: 2px groove #eeede0;
+  border-bottom: none;
+}
+.morkborg.sheet .sheet-header .summary li {
+  height: calc(100% - 6px);
+  float: left;
+  margin: 2px 0;
+  padding: 0;
+  border-right: 2px groove #eeede0;
+  line-height: 34px;
+  color: #4b4a44;
+  font-family: 'Special Elite', cursive;
+  font-weight: bold;
+  font-size: 14px;
+}
+.morkborg.sheet .sheet-header .summary li:last-child {
+  border-right: none;
 }
 .morkborg.sheet.actor .sheet-header .attributes {
   flex: 0 0 100%;
@@ -119,7 +203,9 @@
   border-right: none;
 }
 .morkborg.sheet.actor .sheet-header .attributes .attribute .attribute-name {
-  text-transform: uppercase;  
+  /*text-transform: uppercase;*/
+  font-family: "FetteTrumpDeutsch", fantasy, serif;
+  font-size: 16px;  
 }
 .morkborg.sheet.actor .sheet-header .attributes .attribute .attribute-value {
   height: 30px;
@@ -148,7 +234,7 @@
   align-items: center;
   height: 28px;
   line-height: 28px;
-  font-family: "Modesto Condensed", "Palatino Linotype", serif;
+  font-family: "Modesto Condensed", "Palatino Linotype", serif; 
   font-size: 20px;
   font-weight: 700;
 }
@@ -190,34 +276,29 @@
   margin: 0;
   text-transform: uppercase;
 }
-.morkborg .resources {
-  flex: 1;
+.morkborg.sheet .sheet-tabs {
+  flex: 0 0 30px;
+  margin-bottom: 5px;
+  font-family: "Modesto Condensed", "Palatino Linotype", serif;
+  font-size: 20px;
+  font-weight: 700;
+  /* TODO: track down the border-top and border-bottom getting inherited on these */
+  border-top: none;
+  border-bottom: none;
 }
-.morkborg .resource {
-
-  border: 1px solid red;
-  text-align: center;
-  height: 100px;
-  width: 100px;
+.morkborg.sheet .sheet-tabs .item {
+  font-family: "FetteTrumpDeutsch", fantasy, serif;
+  font-size: 20px;
+  height: 30px;
+  line-height: 32px;
+  margin: 0 24px;
+  border-bottom: 3px solid #b5b3a4;
 }
-.morkborg .resource input {
-  width: 50px;
-  height: 28px;
-}
-.morkborg .tabs {
-  flex: 0 0 40px;
-  border-top: 1px solid #AAA;
-  border-bottom: 1px solid #AAA;
-}
-.morkborg .tabs .item {
-  line-height: 40px;
-  font-family: "FetteTrumpDeutsch", fantasy, serif;  
-}
-.morkborg .tabs .item.active {
-  text-decoration: underline;
-  text-shadow: none;
+.morkborg.sheet .sheet-tabs .item.active {
+  border-bottom: 3px solid #44191A;
 }
 .morkborg .sheet-body {
+  /*flex: 1;*/
   overflow: hidden;
 }
 .morkborg .sheet-body .tab {
@@ -285,142 +366,9 @@
   font-weight: 700;
   font-size: 16px;
 }
-.morkborg .attributes {
-  position: relative;
-}
-.morkborg .attributes .attribute-control,
-.morkborg .attributes .group-control {
-  flex: 0 0 20px;
-  text-align: center;
-  line-height: 28px;
-  border: none;
-}
-.morkborg .attributes .attribute-roll {
-  flex: 0 0 20px;
-  text-align: center;
-  border-bottom: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.morkborg .attributes .group-prefix {
-  height: 31px;
-  margin-right: 10px;
-}
-.morkborg .attributes .button {
-  width: 100%;
-  flex: 1;
-  margin: 0;
-  background: rgba(0, 0, 0, 0.1);
-  border: 2px groove #f0f0e0;
-  border-radius: 3px;
-  font-size: 14px;
-  line-height: 28px;
-  display: block;
-}
-.morkborg .attributes .attribute-key {
-  background: transparent;
-  border: none;
-}
-.morkborg .attributes-header {
-  position: sticky;
-  top: 0;
-  left: 0;
-  align-items: center;
-  padding: 0 5px;
-  margin: 5px 0;
-  background: #cfcdc2;
-  border: 1px solid #AAA;
-  border-radius: 2px;
-  text-align: left;
-  font-weight: bold;
-}
-.morkborg .attributes-list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-.morkborg .attributes-list li > * {
-  margin: 0 3px;
-  height: 28px;
-  line-height: 24px;
-  background: transparent;
-  border: none;
-  border-radius: 0;
-  border-bottom: 1px solid #AAA;
-}
-.morkborg .attributes-list .attribute-col label {
-  font-size: 10px;
-  text-align: center;
-  line-height: 1;
-}
-.morkborg .attributes-list .attribute-col input {
-  font-size: 11px;
-  text-align: center;
-  line-height: 1;
-  height: 50%;
-}
-.morkborg .attribute input[type="text"]::placeholder,
-.morkborg .group-header input[type="text"]::placeholder {
-  opacity: 0;
-  transition: opacity 0.25s ease-in-out;
-}
-.morkborg .attribute input[type="text"]:focus::placeholder,
-.morkborg .group-header input[type="text"]:focus::placeholder {
-  opacity: 1;
-}
-.morkborg .group-controls {
-  margin: 5px;
-}
-.morkborg .groups-list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-.morkborg .group {
-  margin: 5px 0 0;
-  padding: 0;
-}
-.morkborg .group-header {
-  align-items: center;
-  background: rgba(0, 0, 0, 0.05);
-  border: 1px solid #AAA;
-  border-radius: 2px;
-  padding: 2px 5px;
-}
-.morkborg .group-key,
-.morkborg .group-label {
-  font-weight: bold;
-  border: none;
-  border-bottom: 1px solid #AAA;
-  background: transparent;
-  border-radius: 0;
-  margin-right: 6px;
-}
-.morkborg .group-key {
-  opacity: 0.75;
-}
-.morkborg .group-label {
-  flex: 2;
-}
-.morkborg .group-dtype {
-  height: 24px;
-  flex: 0 0 116px;
-  margin: 0 5px;
-}
-.morkborg.sheet.actor {
+/**/.morkborg.sheet.actor {
   min-width: 560px;
   min-height: 420px;
-}
-.morkborg.sheet.actor .traits i.fas {
-  float: right;
-  margin-right: 3px;
-  text-align: right;
-  color: #999;
-}
-.morgborg.sheet.actor .traits i.fas:hover {
-  color: #111;
-  text-shadow: 0 0 10px red;
 }
 .morkborg.sheet.item {
   min-width: 460px;
