--- a/templates/actor-sheet.html
+++ b/templates/actor-sheet.html
@@ -9,22 +9,33 @@
                 <input name="name" type="text" value="{{actor.name}}" placeholder="{{ localize 'MB.Name' }}"/>
             </h1>
 
-<!--             <aside class="header-classname flexcol">
+            <aside class="header-classname flexcol">
                 <div class="charname">
                     <label>{{data.class.name}}</label>
                 </div>
             </aside>
- -->
+
             {{!-- Character Summary --}}
-            <ul class="summary flexrow">
+<!--             <ul class="summary flexrow">
                 <li>
                     <label>{{data.class.name}}</label>
                 </li>
             </ul>
+ -->
+            <ul class="attributes abilities flexrow">
+                {{#each data.abilities as |ability key|}}
+                    <li class="attribute">
+                        <h4 class="attribute-name box-title rollable" data-roll="d20+@abilities.{{key}}.score" data-label="{{key}}">{{ ability.label }}</h4>
+                        <div class="attribute-value multiple">
+                           <input class="left-column-input" type="text" name="data.abilities.{{key}}.score" value="{{numberFormat ability.score decimals=0 sign=true}}" data-dtype="Number"/>
+                        </div>
+                    </li>
+                {{/each}}
+            </ul>
 
             {{!-- Header Attributes --}}
             <ul class="attributes flexrow">
-                <li class="attribute health">
+                <li class="attribute">
                     <h4 class="attribute-name box-title">{{ localize "MB.HitPoints" }}</h4>
                     <div class="attribute-value multiple">
                         <input name="data.hp.current" type="text" value="{{data.hp.current}}" placeholder="10" data-dtype="Number"/>
@@ -59,7 +70,7 @@
 
     {{!-- Sheet Tab Navigation --}}
     <nav class="sheet-tabs tabs" data-group="primary">
-        <a class="item active" data-tab="abilities">Abilities</a>
+        {{!-- <a class="item active" data-tab="abilities">Abilities</a> --}}
         <a class="item" data-tab="inventory">Inventory</a>
         <a class="item" data-tab="class">Class</a>
         <a class="item" data-tab="description">Background</a>
@@ -69,6 +80,7 @@
     <section class="sheet-body">
 
         {{!-- Abilities Tab --}}
+        {{!--
         <div class="tab abilities" data-group="primary" data-tab="abilities">
             <div class="ability-grid">
                 {{#each data.abilities as |ability key|}}
@@ -78,11 +90,10 @@
                     <div class="ability-score">
                         <input class="left-column-input ability-value" type="text" name="data.abilities.{{key}}.score" value="{{numberFormat ability.score decimals=0 sign=true}}" data-dtype="Number"/>
                     </div>
-                   {{/each}}
+                {{/each}}
             </div>
         </div>
-            </div>
-        </div>
+        --}}
 
         {{!-- Inventory Tab --}}
         <div class="tab items" data-group="primary" data-tab="inventory">
@@ -132,12 +143,12 @@
                         <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
                         <h4 class="item-name">{{item.name}}</h4>
                         <div class="item-buttons">
-                            {{!-- 
-                            <button class="item-button rollable" data-roll="d20+@abilities.agility.score" data-label="defend_{{item._id}}"
-                                    title="{{localize 'MB.Defend'}}">{{localize "MB.Defend"}}</button>
-                            <button class="item-button rollable" data-roll="{{item.data.damageReductionDie}}" data-label="damageReduction_{{item._id}}"
-                                    title="{{localize 'MB.DamageReduction'}}">{{item.data.damageReductionDie}} {{localize "MB.DamageReduction"}}</button>                                    
-                                --}}
+                            {{#ifEquals item.type "armor"}}
+                                <button class="item-button rollable" data-roll="d20+@abilities.agility.score" data-label="defend_{{item._id}}"
+                                        title="{{localize 'MB.Defend'}}">{{localize "MB.Defend"}}</button>
+                                <button class="item-button rollable" data-roll="{{item.data.damageReductionDie}}" data-label="damageReduction_{{item._id}}"
+                                        title="{{localize 'MB.DamageReduction'}}">{{item.data.damageReductionDie}} {{localize "MB.DamageReduction"}}</button>                                    
+                            {{/ifEquals}}
                         </div>
                         <div class="item-controls">
                             <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
@@ -146,29 +157,6 @@
                     </li>
                     {{/each}}
                 </ol>
-
-                <li class="items-header flexrow">
-                    <h3 class="item-name flexrow">{{localize "MB.ItemTypeShieldPlural"}}</h3>
-                    <div class="item-controls flexrow">
-                        <a class="item-control item-create" title='{{localize "MB.ItemCreate"}}'>
-                            <i class="fas fa-plus"></i> {{localize "MB.Add"}}
-                        </a>
-                    </div>
-                </li>   
-                <ol class="item-list">
-                    {{#each actor.shields as |item id|}}
-                    <li class="item flexrow" data-item-id="{{item._id}}">
-                        <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
-                        <h4 class="item-name">{{item.name}}</h4>
-                        <div class="item-buttons">
-                        </div>
-                        <div class="item-controls">
-                            <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                            <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-                        </div>
-                    </li>
-                    {{/each}}
-                </ol>  
 
                 <li class="items-header flexrow">
                     <h3 class="item-name flexrow">{{localize "MB.ItemTypeScrollPlural"}}</h3>
@@ -196,29 +184,6 @@
                     </li>
                     {{/each}}
                 </ol>   
-
-                <li class="items-header flexrow">
-                    <h3 class="item-name flexrow">{{localize "MB.ItemTypeContainerPlural"}}</h3>
-                    <div class="item-controls flexrow">
-                        <a class="item-control item-create" title='{{localize "MB.ItemCreate"}}'>
-                            <i class="fas fa-plus"></i> {{localize "MB.Add"}}
-                        </a>
-                    </div>
-                </li>
-                <ol class="item-list">
-                    {{#each actor.containers as |item id|}}
-                    <li class="item flexrow" data-item-id="{{item._id}}">
-                        <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
-                        <h4 class="item-name">{{item.name}}</h4>
-                        <div class="item-buttons">
-                        </div>
-                        <div class="item-controls">
-                            <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                            <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-                        </div>
-                    </li>
-                    {{/each}}
-                </ol>
 
                 <li class="items-header flexrow">
                     <h3 class="item-name flexrow">{{localize "MB.ItemTypeMiscPlural"}}</h3>
