--- a/styles/morkborg.css
+++ b/styles/morkborg.css
@@ -15,18 +15,18 @@
   font-family: 'Heretic';
   src: url("../fonts/Heretic.ttf") format("truetype");
 }
-@font-face {
+/*@font-face {
   font-family: 'Modesto Condensed';
   font-style: normal;
   font-weight: 400;
-  src: url('../../dnd5e/fonts/modesto-condensed/modesto-condensed.woff2') format('woff2');
+  src: url('../../fonts/modesto-condensed/modesto-condensed.woff2') format('woff2');
 }
 @font-face {
   font-family: 'Modesto Condensed';
   font-style: normal;
   font-weight: 700;
-  src: url('../../dnd5e/fonts/modesto-condensed/modesto-condensed-bold.woff2') format('woff2');
-}
+  src: url('../../fonts/modesto-condensed/modesto-condensed-bold.woff2') format('woff2');
+}*/
 .modesto {
   font-family: "Modesto Condensed", "Palatino Linotype", serif;
   font-size: 20px;
@@ -125,7 +125,7 @@
 }
 .morkborg .sheet-header {
   flex: 0 0 100px;
-  border-bottom: 2px groove #eeede0;
+  /*border-bottom: 2px groove #eeede0;*/
 }
 .morkborg.sheet .sheet-header h1 {
   flex: 1;
@@ -143,7 +143,7 @@
 .morkborg .sheet-header .profile-img {
   object-fit: contain;
   border: none;
-  border-right: 2px groove #eeede0;
+  /*border-right: 2px groove #eeede0;*/
   /* TODO: figure out desired height of attributes and make this match up */
   flex: 0 0 173px;
   max-width: 173px;
@@ -173,7 +173,7 @@
   margin: 0;
   padding: 0;
   list-style: none;
-  border-top: 2px groove #eeede0;
+  /*border-top: 2px groove #eeede0;*/
   border-bottom: none;
 }
 .morkborg.sheet .sheet-header .summary li {
@@ -181,7 +181,7 @@
   float: left;
   margin: 2px 0;
   padding: 0;
-  border-right: 2px groove #eeede0;
+  /*border-right: 2px groove #eeede0;*/
   line-height: 34px;
   /*color: #4b4a44;*/
   color: black;
@@ -197,17 +197,21 @@
   margin: 0;
 }
 .morkborg.sheet.actor .sheet-header .attributes .attribute {
-  height: 70px;
-  margin: 0;
-  border: none;
-  border-right: 2px groove #eeede0;
+  height: 77px;
+  /*margin: 0;*/
+  margin-right: 10px;
+  /*border: none;*/
+  /*border-right: 2px groove #eeede0;*/
+  border: 1px dotted black;
   border-radius: 0;
 }
 .morkborg.sheet.actor .sheet-header .attributes.abilities .attribute {
   height: 100px;
+  border: none;
+  border-right: none;
 }
 .morkborg.sheet.actor .sheet-header .attributes .attribute:last-child {
-  border-right: none;
+  /*border-right: none;*/
 }
 .morkborg.sheet.actor .sheet-header .attributes .attribute .attribute-name {
   font-family: "FetteTrumpDeutsch", fantasy, serif;
@@ -228,12 +232,12 @@
   list-style: none;
   margin: 0;
   padding: 0;
-  border-top: 2px groove #eeede0;
+  /*border-top: 2px groove #eeede0;*/
 }
 .morkborg.sheet.actor ul.attributes li.attribute {
-  height: 60px;
+  height: 70px;
   margin: 0 5px 0 0;
-  border: 2px groove #eeede0;
+  /*border: 2px groove #eeede0;*/
   border-radius: 4px;
   text-align: center;
 }
@@ -268,7 +272,6 @@
   flex: 0 0 18px;
   margin-top: -1px;
   line-height: 18px;
-  /*font-family: "Signika", sans-serif;*/
   font-family: 'Special Elite', cursive;
   font-size: 12px;
   font-weight: 400;
@@ -282,43 +285,7 @@
   color: #7a7971;
   font-weight: normal;
 }
-/*.ability-grid {
-  padding-top: 20px;
-  display: grid;
-  grid-template-columns: 150px 60px;
-  row-gap: 10px;
-  border: 1px solid black;
-}
-.morkborg.sheet .ability-name {
-  font-family: "Blood Crow", fantasy, serif;
-  font-size: 28px;
-  text-align: center;
-}
-.morkborg.sheet div.ability-score {
-  background: url("../ui/drawncircle.png") no-repeat;
-  background-size: 40px 40px;
-  height: 40px;
-  width: 40px;
-  text-align: center;
-  position: relative;
-}
-.morkborg.sheet div.ability-score input {
-  text-align: center;
-  font-family: "FetteTrumpDeutsch", fantasy, serif;
-  font-size: 24px;
-  width: 36px;
-  height: 28px;
-  text-align: center;
-  margin: 0;
-  position: absolute;
-  top: 10%;
-  left: 50%;
-  -ms-transform: translateY(-10%);
-  transform: translateY(-10%);  
-  -ms-transform: translateX(-50%);
-  transform: translateX(-50%);  
-}
-*/.morkborg.sheet.item .sheet-header .item-subtitle {
+.morkborg.sheet.item .sheet-header .item-subtitle {
   flex: 0 0 100px;
   height: 60px;
   margin: 0;
@@ -431,4 +398,11 @@
 .morkborg.sheet.item {
   min-width: 460px;
   min-height: 400px;
+}
+.morkborg.sheet textarea {
+  margin-top: 10px;
+  resize: none;
+  font-family: 'Special Elite', cursive;
+  font-size: 16px;
+  height: 200px;
 }
