--- a/styles/morkborg.css
+++ b/styles/morkborg.css
@@ -196,6 +196,10 @@
   flex: 0 0 100%;
   margin: 0;
 }
+.morkborg.sheet.actor .sheet-header .abilities {
+  flex: 0 0 100%;
+  margin: 0;
+}
 .morkborg.sheet.actor .sheet-header .attributes .attribute {
   height: 77px;
   /*margin: 0;*/
@@ -205,7 +209,9 @@
   border: 1px dotted black;
   border-radius: 0;
 }
-.morkborg.sheet.actor .sheet-header .attributes.abilities .attribute {
+.morkborg.sheet.actor .sheet-header .abilities .ability {
+  margin-right: 10px;
+  border-radius: 0;
   height: 100px;
   border: none;
   border-right: none;
@@ -218,7 +224,7 @@
   font-size: 16px;  
   /*background-color: #ffe500;*/
 }
-.morkborg.sheet.actor .sheet-header .attributes.abilities .attribute .attribute-name {
+.morkborg.sheet.actor .sheet-header .abilities .ability .ability-name {
   font-family: "FetteTrumpDeutsch", fantasy, serif;
   font-size: 16px;  
   /*background-color: #ffe500;*/
@@ -234,6 +240,13 @@
   padding: 0;
   /*border-top: 2px groove #eeede0;*/
 }
+.morkborg.sheet.actor ul.abilities {
+  flex: 0 0 60px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  /*border-top: 2px groove #eeede0;*/
+}
 .morkborg.sheet.actor ul.attributes li.attribute {
   height: 70px;
   margin: 0 5px 0 0;
@@ -241,7 +254,17 @@
   border-radius: 4px;
   text-align: center;
 }
+.morkborg.sheet.actor ul.abilities li.ability {
+  height: 70px;
+  margin: 0 5px 0 0;
+  /*border: 2px groove #eeede0;*/
+  border-radius: 4px;
+  text-align: center;
+}
 .morkborg.sheet.actor ul.attributes li.attribute:last-child {
+  margin: 0;
+}
+.morkborg.sheet.actor ul.abilities li.ability:last-child {
   margin: 0;
 }
 .morkborg.sheet.actor ul.attributes li.attribute .attribute-value {
@@ -254,7 +277,13 @@
   font-size: 20px;
   font-weight: 700;
 }
-.morkborg.sheet.actor ul.attributes.abilities li.attribute .attribute-value {
+.morkborg.sheet.actor ul.abilities li.ability .ability-value {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Modesto Condensed", "Palatino Linotype", serif; 
+  font-size: 20px;
+  font-weight: 700;
   /*background: url("../ui/shield_icon.png") no-repeat;*/
   background: url("../ui/drawnsquare.png") no-repeat;
   height: 60px;
@@ -265,7 +294,15 @@
   font-weight: 400;
   font-size: 24px;
 }
+.morkborg.sheet.actor ul.abilities li.ability .ability-value > * {
+  font-weight: 400;
+  font-size: 24px;
+}
 .morkborg.sheet.actor ul.attributes li.attribute .attribute-value.multiple input {
+  flex: 0 0 33%;
+}
+/* TODO: do we want multiple to be specified for abilities? */
+.morkborg.sheet.actor ul.abilities li.ability .ability-value.multiple input {
   flex: 0 0 33%;
 }
 .morkborg.sheet.actor ul.attributes li.attribute .attribute-footer {
